Wed Jul 27 00:45:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Integer#to_d): added
	  for symmetry to BigDecimal() function with an Integer.
	  fixes #5098.  [ruby-dev:44210]

	* test/bigdecimal/test_bigdecimal_util.rb: add test for the above
	  change.

Wed Jul 27 00:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (BigDecimal#to_d): added
	  for adapting other Numeric subclasses.  [ruby-dev:44245]

	* test/bigdecimal/test_bigdecimal_util.rb: test for the above change.

Wed Jul 27 00:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* bigdecimal/bigdecimal.c (VpDup) a new function for duplicating
	  a BigDecimal.

	* bigdecimal/bigdecimal.c (BigDecimal_new): support generating a new
	  BigDecimal from another BigDecimal using BigDecimal global function
	  or constructor.  [ruby-dev:44245]

Tue Jul 26 23:33:24 2011  Igor Zubkov  <igor.zubkov@gmail.com>

	* array.c: Fix typo. https://github.com/ruby/ruby/pull/36

Mon Jul 25 23:51:01 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c: pre-allocate the unlinked_method_entry_list_entry struct to
	  avoid memory allocation during GC.  based on a patch from Eric Wong.
	  [ruby-core:38498]

Mon Jul 25 23:39:33 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rake/test_rake_directory_task.rb (TestRakeDirectoryTask#
	  test_directory_win32): fixed wrong test.

Mon Jul 25 22:36:11 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (struct METHOD), gc.c (gc_marks), vm_method.c
	  (rb_gc_mark_unlinked_live_method_entries): fix SEGV bug.
	  rb_method_entry_t was free'd even when the method is still on the
	  stack if it is BMETHOD (i.e., Method#call).  This is because
	  rb_method_entry_t is embedded in struct METHOD.  This commit
	  separates them and marks the live method entries.
	  See [ruby-core:38449] in detail.  fix [Bug #5047] [ruby-core:38171]

Mon Jul 25 22:14:37 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
