@@ -12,4 +12,17 @@ class TestBigDecimalUtil < Test::Unit::TestCase
     assert_equal(BigDecimal(1), 1.to_d)
     assert_equal(BigDecimal(2<<100), (2<<100).to_d)
   end
+
+  def test_Float_to_d_without_precision
+    delta = 1.0/10**(Float::DIG + 1)
+    assert_in_delta(BigDecimal(0.5, Float::DIG+1), 0.5.to_d, delta)
+    assert_in_delta(BigDecimal(355.0/113.0, Float::DIG+1), (355.0/113.0).to_d, delta)
+  end
+
+  def test_Float_to_d_with_precision
+    digits = 5
+    delta = 1.0/10**(digits)
+    assert_in_delta(BigDecimal(0.5, 5), 0.5.to_d(digits), delta)
+    assert_in_delta(BigDecimal(355.0/113.0, 5), (355.0/113.0).to_d(digits), delta)
+  end
 end
